--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -92,10 +92,10 @@ BEGIN
             VALUE "CompanyName", "com.sinya.projects" "\0"
             VALUE "FileDescription", "neoflex_quiz" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "neoflex_quiz" "\0"
+            VALUE "InternalName", "NeoQuest" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.sinya.projects. All rights reserved." "\0"
-            VALUE "OriginalFilename", "neoflex_quiz.exe" "\0"
-            VALUE "ProductName", "neoflex_quiz" "\0"
+            VALUE "OriginalFilename", "NeoQuest.exe" "\0"
+            VALUE "ProductName", "NeoQuest" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
